# cursor-init

./: .cursorrules  .gitignore  MANIFEST.in  README.md  main.py  pyproject.toml
.cursor/: mcp.json
.cursor-init/docs/: directory-structure.md  mvp-design.md  tect-stack.md  workflow.md
.cursor/ontology/: guide.md
cursor_init/: __init__.py  application.py  cli.py  core.py  main.py  utils.py
cursor_init/services/: __init__.py
cursor_init/services/common/: __init__.py
cursor_init/services/docs/: __init__.py  service.py
cursor_init/services/mcp/: __init__.py  typer.py
cursor_init/templates/: __init__.py
cursor_init/templates/profile/: __init__.py
cursor_init/templates/profile/default/: __init__.py
cursor_init/templates/profile/default/.cursor-init/docs/: directory-structure.md  mvp-design.md  tect-stack.md  workflow.md
cursor_init/templates/profile/default/.cursor/rules/: development.mdc  git.mdc  task-check.mdc  task.mdc  think.mdc
docs/: directory-structure.md  mvp-design.md  tect-stack.md
src/: __init__.py  application.py  main.py
src/services/common/: file_utils.py
src/services/docs/: service.py  typer.py
src/templates/profile/default/.cursor-init/docs/: mvp-design.md
src/templates/profile/default/.cursor/rules/: directory-structure.mdc  tech-stack.mdc
templates/: .cursorrules
templates/docs/: workflow.md
