[project]
name = "cursor-init"
version = "0.1.0"
description = "프로젝트 규칙 파일을 간편하게 세팅하는 CLI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer[all]",
]

[project.scripts]
cursor-init = "cursor_init.cli:app"

[tool.setuptools.packages.find]
include = ["cursor_init"]
recursive-include templates *
prune .cursorrules
prune docs
prune tests
prune .git
prune .venv
exclude *.pyc
exclude __pycache__/
