[project]
name = "cursor-init"
version = "0.1.8"
description = "프로젝트 규칙 파일을 간편하게 세팅하는 CLI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.32.3",
    "typer",
    "types-requests>=2.32.0.20250328",
]

[dependency-groups]
dev = [
    "build>=1.2.2.post1",
    "pytest>=8.3.5",
    "twine>=6.1.0",
]

[project.scripts]
cursor-init = "cursor_init.application:app"

[tool.setuptools.packages.find]
include = ["cursor_init", "cursor_init.*"]

[tool.setuptools.package-data]
"cursor_init" = ["templates/**/*"]

[tool.uv]
package = true